@@ -1,47 +1,0 @@
-
-version: 2
-jobs:
-  build:
-    docker:
-      # This Docker image contains a very old firefox and no geckodriver,
-      # due to Selenium compatibility. Since we don't use Selenium, we take
-      # care of installing a recent firefox and geckodriver (see below).
-      - image: circleci/clojure:lein-2.9.3-browsers
-
-    steps:
-      - checkout
-      - run:
-          name: Environment information
-          command: |
-            firefox --version
-            google-chrome --version
-            chromedriver --version
-
-      # We want to share the results of "lein deps" between runs.
-      # We assume that the maven cache can change only if "project.clj"
-      # changes (see the checksum in the name of the key below).
-      - restore_cache:
-          keys:
-            - m2-{{ checksum "project.clj" }}
-      - run: lein deps
-      - save_cache:
-          key: m2-{{ checksum "project.clj" }}
-          paths:
-            - ~/.m2
-
-      # For better visibility in the build summary page, we use a separate
-      # run step per test file. In this case, we don't want to stop the build
-      # on first failure, so we use the `when` keyword.
-
-      # Note on the ETAOIN_TEST_DRIVERS environment variable:
-      # The only reason we override the logic to select the drivers is due to
-      # the following bug:
-      # When using firefox, at a certain point there is an exception thrown
-      # from the fixture code. clojure.test is not able to withstand this
-      # and just chokes. As such, we split the tests between firefox-only
-      # and everything but firefox to allow to compare them (and see that
-      # the firefox tests report "ran 0 tests" due to the fixture bug)
-      - run: lein test2junit
-
-      - store_test_results:
-          path: target/test2junit
