@@ -30,6 +30,7 @@ Other Changes
 ** https://github.com/clj-commons/etaoin/issues/382[#382]: Fix process fork testing on Windows
 ** https://github.com/clj-commons/etaoin/issues/391[#391]: Identify browser name on failed ide tests
 ** https://github.com/clj-commons/etaoin/issues/390[#390]: Add internal clj-kondo config
+** https://github.com/clj-commons/etaoin/issues/381[#381]: In addition to ubuntu, now also testing on macOS and Windows (using GitHub Actions https://github.com/clj-commons/etaoin/issues/392[#392])
 
 == v0.4.6
 
